# UWS

./: .gitignore  README.md  SYNC.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
server-plugins/: README.md  build.gradle.kts  settings.gradle.kts
server-plugins/bukkit-plugin/src/main/resources/: config.yml  plugin.yml
server-plugins/bukkit-shared/: build.gradle.kts
server-plugins/common/: build.gradle.kts
server-plugins/fabric-mod/: build.gradle.kts
server-plugins/fabric-mod/src/main/resources/: fabric.mod.json
server-plugins/forge-mod/: build.gradle.kts
server-plugins/mohist-plugin/: build.gradle.kts
server-plugins/mohist-plugin/src/main/resources/: config.yml  plugin.yml
server-plugins/neoforge-mod/: build.gradle.kts
server-plugins/paper-plugin/src/main/resources/: config.yml  plugin.yml
server-plugins/shell-hook/: CMakeLists.txt  README.md  bridge.sh
server-plugins/shell-hook/src/: main.cpp
server-plugins/spigot-plugin/src/main/resources/: config.yml  plugin.yml
server-plugins/spipot-plugin/: build.gradle.kts
server-plugins/spipot-plugin/src/main/resources/: config.yml  plugin.yml
server-plugins/standalone-rcon/: README.md  config.example.json  index.js  package.json
server-plugins/stubs/: build.gradle.kts
server-plugins/stubs/src/main/java/com/mojang/authlib/: GameProfile.java
server-plugins/stubs/src/main/java/net/fabricmc/api/: DedicatedServerModInitializer.java
server-plugins/stubs/src/main/java/net/minecraft/commands/: CommandSourceStack.java  Commands.java
(+55 files in other folders)
